tests/purs/failing/3549-a.out
Error found:
in module [33mMain[0m
at tests/purs/failing/3549-a.purs:6:26 - 6:29 (line 6, column 26 - line 6, column 29)

  Unknown type [33mTyp[0m


See https://github.com/purescript/documentation/blob/master/errors/UnknownName.md for more information,
or to contribute content related to this error.

